# keyword_extractor

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: test_and_quality.yml
.run/: Run.run.xml  Unittests.run.xml  keyword_extractor.run.xml
assets/: dummy-text.txt
src/keyword_extractor/: __init__.py
src/package_name/: __init__.py
src/utils/: __init__.py
test/tests/unit/: test_package_name.py
